[gd_scene load_steps=4 format=3 uid="uid://b1u1oajpm33ry"]

[ext_resource type="Script" path="res://info.gd" id="1_qx6ey"]
[ext_resource type="VideoStream" path="res://pop up_1.ogv" id="1_vey6n"]
[ext_resource type="PackedScene" uid="uid://dj3nen1ghgff4" path="res://fade_transition.tscn" id="3_j8iv6"]

[node name="Info" type="Node2D"]
script = ExtResource("1_qx6ey")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_right = 1151.0
offset_bottom = 653.0
stream = ExtResource("1_vey6n")
autoplay = true
expand = true

[node name="Fade_transition" parent="." instance=ExtResource("3_j8iv6")]
visible = false

[node name="Fade_timer" type="Timer" parent="Fade_transition"]
autostart = true

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="timeout" from="Fade_transition/Fade_timer" to="." method="_on_fade_timer_timeout"]
